--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(add_logo)
 export(read_os_collection)
 export(scale_color_opensea)
 export(scale_fill_opensea)
+import(ggplot2)
 importFrom(dplyr,"%>%")
 importFrom(ggplot2,ggplot)
 importFrom(grDevices,colorRampPalette)
